# mccode-to-kafka

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pip.yml
src/mccode_to_kafka/: datfile.py  histogram.py  sender.py  utils.py  writer.py
tests/: test_datfile.py  test_hdf5.py  test_writer.py
